# xfel-worklog

./: .env.example  Cargo.toml  readme.md
src/: cli.rs  data.rs  jira.rs  main.rs  model.rs  query.rs
src/cli/: action.rs  browse.rs  date_parse.rs  fetch.rs  query.rs  table.rs
src/data/: model.rs  query.rs
