[package]
name = "xfel-worklog"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yaml-front-matter = "0.1.0"
serde = { version = "1.0.145", features = ["derive"] }
walkdir = "2.3.2"
chrono = "0.4.22"
clap = { version = "4.0.9", features = ["derive"] }
simple_logger = "2.3.0"
log = "0.4.17"
tabled = "0.9.0"
dotenv = "0.15.0"
envy = "0.4.2"
reqwest = { version = "0.11.12", features = ["blocking", "json"] }
